--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ lint.select = ["E", "F", "W", "I"]
 [tool.mypy]
 # By default, mypy is not strict
 strict = false
+ignore_missing_imports = true
 plugins = ["pydantic.mypy"]
 files = [
     "src/eassistant",
