--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "rich",
     "boto3",
     "pydantic-settings",
+    "pypdf",
+    "reportlab",
 ]
 
 [build-system]
@@ -43,4 +45,5 @@ follow_imports = "skip"
 # We enable strict checking for specific modules that are fully typed
 overrides = [
     { module = "eassistant.graph.state", strict = true },
+    { module = "tests.*", strict = false, ignore_errors = true },
 ]
