--- a/project.todo.json
+++ b/project.todo.json
@@ -206,7 +206,9 @@
           "id": "M3.3",
           "name": "Implement `save_draft` node",
           "dependencies": ["M1.1", "M3.1"],
-          "definition_of_done": "A node is created that uses the storage service to save the latest draft."
+          "definition_of_done": "A node is created that uses the storage service to save the latest draft.",
+          "status": "done",
+          "completed_at": "2025-09-27T13:32:57.800Z"
         },
         {
           "id": "M3.4",
