--- a/project.todo.json
+++ b/project.todo.json
@@ -214,7 +214,9 @@
           "id": "M3.4",
           "name": "Implement `handle_error` node and graph integration",
           "dependencies": ["M1.6"],
-          "definition_of_done": "The graph can catch exceptions from any node and route to a node that prints a user-friendly error message."
+          "definition_of_done": "The graph can catch exceptions from any node and route to a node that prints a user-friendly error message.",
+          "status": "done",
+          "completed_at": "2025-09-27T13:40:43.742Z"
         },
         {
           "id": "M3.5",
