--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,7 +1,10 @@
 # Configuration file for the eassistant application
 
 # The ID of the model to use for the LLM service
-model_id: "anthropic.claude-3-7-sonnet-20250219-v1:0"
+model_id: "anthropic.claude-3-sonnet-20240229-v1:0"
 
 # The name of the S3 bucket to use for storage
 s3_bucket_name: "raykyrleallenbucket"
+
+# The AWS region to use for services
+region_name: "eu-west-1"
