chore(docs): process project status summary doc [#M4.1]

--- a/project.todo.json
+++ b/project.todo.json
@@ -329,7 +329,8 @@
           "name": "Process Project_Status_Summary.md",
           "dependencies": [],
           "definition_of_done": "The Project_Status_Summary.md document is read and its contents are processed.",
-          "status": "pending"
+          "status": "done",
+          "completed_at": "2025-09-29T09:06:50.854Z"
         },
         {
           "id": "M4.2",
