--- a/project.todo.json
+++ b/project.todo.json
@@ -349,7 +349,8 @@
             "M3.7"
           ],
           "definition_of_done": "All existing tests in the suite pass reliably. Any and all intermittent failures are investigated and permanently resolved.",
-          "status": "pending"
+          "status": "done",
+          "completed_at": "2025-09-29T09:31:05.000Z"
         },
         {
           "id": "M4.4",
